chore: added prompt for do-swarm and option on generator

--- a/generators/cloudflare-dns/templates/cloudflare-dns/Pulumi.stack.yaml
+++ b/generators/cloudflare-dns/templates/cloudflare-dns/Pulumi.stack.yaml
@@ -4,7 +4,7 @@ config:
 
   <%= projectName %>:createHostRecord: true
 
-  <%= projectName %>:domain: DOMAIN
+  <%= projectName %>:domain: <%= domain %>
 
   # Use ONE of the following 3 settings
   <%= projectName %>:host: HOST
