--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -1,10 +1,10 @@
 aws_secrets_id: SECRET_ID
 
 deploy_dir: /mnt/data
-deploy_group: USERNAME
-deploy_user: USERNAME
+deploy_group: <%= deploy_group %>
+deploy_user: <%= deploy_user %>
 
-domain: DOMAIN
+domain: <%= domain %>
 
 minio_enabled: false
 
