--- a/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
@@ -1,12 +1,13 @@
 config:
   aws:region: ap-southeast-1
+  <%= projectName %>:count: <%= managers_count %>
   <%= projectName %>:doResourcesProject: <%= prefix %>-do-resources
   <%= projectName %>:image: docker-20-04
-  <%= projectName %>:name: <%= prefix %>-<%= environment %>
+  <%= projectName %>:name: <%= prefix %>-<%= managers_environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
-  <%= projectName %>:region: sgp1
+  <%= projectName %>:region: <%= region %>
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:size: s-1vcpu-1gb
-  <%= projectName %>:username: USERNAME
+  <%= projectName %>:size: <%= managers_size %>
+  <%= projectName %>:username: <% managers_username %>
