chore: corrected some syntax

--- a/generators/do-resources/templates/do-resources/Pulumi.stack.yaml
+++ b/generators/do-resources/templates/do-resources/Pulumi.stack.yaml
@@ -2,7 +2,7 @@ config:
   <%= projectName %>:dataVolumeSize: 10
   <%= projectName %>:environment: development
   <%= projectName %>:name: <%= prefix %>-<%= resources_environment %>
-  <%= projectName %>:nameSuffix: <%= nameSuffix %>
+  <%= projectName %>:nameSuffix: "<%= nameSuffix %>"
   <%= projectName %>:protect: "false"
   <%= projectName %>:region: <%= region %>
   <%= projectName %>:retainOnDelete: "false"
