chore: modified do-swarm variables and specifying of variable given to sub generators

--- a/generators/do-resources/templates/do-resources/Pulumi.stack.yaml
+++ b/generators/do-resources/templates/do-resources/Pulumi.stack.yaml
@@ -1,7 +1,7 @@
 config:
   <%= projectName %>:dataVolumeSize: 10
   <%= projectName %>:environment: development
-  <%= projectName %>:name: <%= prefix %>-<%= resources_environment %>
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:nameSuffix: "<%= nameSuffix %>"
   <%= projectName %>:protect: "false"
   <%= projectName %>:region: <%= region %>
