--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -1,8 +1,8 @@
 aws_secrets_id: SECRET_ID
 
 deploy_dir: /mnt/data
-deploy_group: <%= deploy_group %>
-deploy_user: <%= deploy_user %>
+deploy_group: <%= username %>
+deploy_user: <%= username %>
 
 domain: <%= domain %>
 
