--- a/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
@@ -1,13 +1,12 @@
 config:
   aws:region: ap-southeast-1
-  <%= projectName %>:count: <%= managers_count %>
   <%= projectName %>:doResourcesProject: <%= prefix %>-do-resources
   <%= projectName %>:image: docker-20-04
-  <%= projectName %>:name: <%= prefix %>-<%= managers_environment %>
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
   <%= projectName %>:region: <%= region %>
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:size: <%= managers_size %>
-  <%= projectName %>:username: <%= managers_username %>
+  <%= projectName %>:size: <%= size %>
+  <%= projectName %>:username: <%= username %>
