chore: update ansible-do generator playbook to use dzangolab ansible collection (#27)
* chore: update ansible-do generator playbook to use dzangolab ansible collection

* chore:  changed the way we use ansible collection using FQCN and a requirements file

* chore: change file name

* chore: source default is already the same

---------

Co-authored-by: Anthony Phothirath <anthony.phothirath@hotmail.com>

--- a/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
@@ -8,5 +8,7 @@
 
 - name: Install aws-cli
   hosts: awscli
-  roles:
-    - role: dzangolab.awscli2
+  tasks:
+    - name: Import awscli2 from dzangolab collection
+      ansible.builtin.import_role:
+        name: dzangolab.ansible.awscli2
