--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -2,5 +2,7 @@
 
 - name: Deploy portainer
   hosts: all
-  roles:
-    - role: dzangolab.docker_portainer
+  tasks:
+    - name: Import portainer from dzangolab collection
+      ansible.builtin.import_role:
+        name: dzangolab.ansible.docker_portainer
