--- a/generators/ansible-do/templates/ansible/stack/requirements.yml
+++ b/generators/ansible-do/templates/ansible/stack/requirements.yml
@@ -1,7 +1,3 @@
-- src: https://github.com/dzangolab/ansible-docker-portainer
-  version: "1.3"
-  name: dzangolab.docker_portainer
-- src: https://github.com/dzangolab/ansible-docker-traefik
-  version: "4.4"
-  name: dzangolab.docker_traefik
-- src: dzangolab.awscli2
+collections:
+  - name: dzangolab.ansible
+    version: ">=0.1.0"
