chore: added aws-account-arns in stack config

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -2,3 +2,5 @@ config:
   <%= projectName %>:forceDestroy: false
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false  
+  <%= projectName %>:aws-account-arns: 
+    - AWS-ACCOUNT-ARNS
