feat: added bucket policy

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -3,4 +3,5 @@ config:
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false  
   <%= projectName %>:aws-account-arns: 
-    - AWS-ACCOUNT-ARNS
+    - ARN1
+    - ARN2
