fix: update variable order

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -1,6 +1,7 @@
 config:
   <%= projectName %>:aws-account-arns: 
-    -
+    - ARN1
+    - ARN2
   <%= projectName %>:forceDestroy: false
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false  
