--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -8,4 +8,4 @@ config:
     - traefik-dashboard
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:timestamp: "YYYYMMDD"
+  <%= projectName %>:timestamp: "<%= timestamp %>"
