chore: updated generator and made a README

--- a/generators/ansible-do/templates/ansible/stack/group_vars/awscli.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/awscli.yml
@@ -1,6 +1,6 @@
 aws_region: ap-southeast-1
 awscli_users:
-  - user: USERNAME
+  - user: <%= username %>
     state: present
     profiles:
       - name: default
