--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -2,7 +2,7 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:passwords:
     # - mariadb-root
-    - minio-root
+    # - minio-root
     # - nocodb
     - postgres
     - traefik-dashboard
