--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -6,6 +6,7 @@ config:
     # - nocodb
     - postgres
     - traefik-dashboard
+  <%= projectName %>:awsResourcesProject: <%= prefix %>-aws-resources
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:timestamp: "<%= timestamp %>"
