--- a/generators/do-nfs-server/templates/do-nfs-server/Pulumi.yaml
+++ b/generators/do-nfs-server/templates/do-nfs-server/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: DigitalOcean NFS server
+description: PRovisions a DigitalOcean NFS server
