feat: update dependencies

--- a/generators/do-database-cluster/templates/do-database-cluster/package.json
+++ b/generators/do-database-cluster/templates/do-database-cluster/package.json
@@ -2,10 +2,10 @@
   "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
-    "@pulumi/digitalocean": "^4",
-    "@pulumi/pulumi": "^3"
+    "@pulumi/digitalocean": "<%= versions.digitalocean %>",
+    "@pulumi/pulumi": "<%= versions.pulumi %>"
   },
   "devDependencies": {
-    "@types/node": "20"
+    "@types/node": "<%= versions.types_node %>"
   }
 }
