--- a/generators/do-swarm-workers/templates/do-swarm-workers/package.json
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/package.json
@@ -2,11 +2,11 @@
   "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
-    "@dzangolab/pulumi": "^0.29",
-    "@pulumi/digitalocean": "^4",
-    "@pulumi/pulumi": "^3"
+    "@dzangolab/pulumi": "<%= versions.dzangolab %>",
+    "@pulumi/digitalocean": "<%= versions.digitalocean %>",
+    "@pulumi/pulumi": "<%= versions.pulumi %>"
   },
   "devDependencies": {
-    "@types/node": "^20"
+    "@types/node": "<%= versions.types_node %>"
   }
 }
