--- a/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.yaml
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: DigitalOcean resources for Docker swarm leader
+description: DigitalOcean resources for Docker swarm workers
