--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -1,8 +1,6 @@
 config:
   aws:region: ap-southeast-1
-#  <%= projectName %>:blockVolumeId: BLOCK VOLUME ID 
-#  <%= projectName %>:blockVolumeName: BLOCK NOLUME NAME
-#  <%= projectName %>:blockVolumeStack: <%= prefix %>-do-resources 
+  <%= projectName %>:count: "1"
   <%= projectName %>:image: docker-20-04
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: "../../ssh-keys"
@@ -12,8 +10,6 @@ config:
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
   <%= projectName %>:region: sgp1
-#  <%= projectName %>:reservedIpId: RESERVED IP
-#  <%= projectName %>:reservedIpStack: <%= prefix %>-do-resources
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:size: s-1vcpu-1gb
   <%= projectName %>:sshKeyNames: 
