chore: correction readme, put back basic volume config

--- a/generators/do-swarm-managers/templates/do-swarm-managers/Pulumi.stack.yaml
+++ b/generators/do-swarm-managers/templates/do-swarm-managers/Pulumi.stack.yaml
@@ -1,6 +1,8 @@
 config:
+#  <%= projectName %>:blockVolumeId: BLOCK VOLUME ID 
+#  <%= projectName %>:blockVolumeName: BLOCK NOLUME NAME
+#  <%= projectName %>:blockVolumeStack: <%= prefix %>-do-resources 
   <%= projectName %>:count: "1"
-  <%= projectName %>:dataVolumeSize: 10
   <%= projectName %>:image: ubuntu-24-10-x64
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: "../../ssh-keys"
