--- a/generators/do-swarm-managers/templates/do-swarm-managers/Pulumi.yaml
+++ b/generators/do-swarm-managers/templates/do-swarm-managers/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: PRovisions a DigitalOcean NFS server
+description: One or multiple DigitalOcean droplets, configured as managers
