--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: DigitalOcean resources for Docker swarm workers
+description: DigitalOcean droplets to be used as Docker swarm workers
