--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -1,12 +1,19 @@
 config:
-  aws:region: ap-southeast-1
-  <%= projectName %>:doResourcesProject: <%= prefix %>-do-resources
+#  <%= projectName %>:count: "1"
   <%= projectName %>:image: docker-20-04
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
+  <%= projectName %>:pathToSshKeysFolder: "../../ssh-keys"
+#  <%= projectName %>:projectId: DO PROJECT ID
+#  <%= projectName %>:projectStack: <%= prefix %>-do-resources
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
   <%= projectName %>:region: sgp1
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:size: s-1vcpu-1gb
+  <%= projectName %>:sshKeyNames: 
+    - ...
+  <%= projectName %>:userGroups: group1,group2
   <%= projectName %>:username: USERNAME
+#  <%= projectName %>:vpcUuid: VPC UUID
+#  <%= projectName %>:vpcStack: <%= prefix %>-do-resources
