fix(do/swarm-workers): fix default count var

--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -1,5 +1,5 @@
 config:
-#  <%= projectName %>:count: "1"
+#  <%= projectName %>:count: 2
   <%= projectName %>:image: docker-20-04
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: "../../ssh-keys"
