--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -13,7 +13,7 @@ config:
   <%= projectName %>:size: s-1vcpu-1gb
   <%= projectName %>:sshKeyNames: 
     - ...
-  <%= projectName %>:userGroups: group1,group2
+#  <%= projectName %>:userGroups: GROUP1,GROUP2
   <%= projectName %>:username: USERNAME
 #  <%= projectName %>:vpcUuid: VPC UUID
 #  <%= projectName %>:vpcStack: <%= prefix %>-do-resources
