chore: change inventory

--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -13,7 +13,7 @@ config:
   <%= projectName %>:size: <%= size %>
   <%= projectName %>:sshKeyNames: 
     - ...
-  <%= projectName %>:userGroups: group1,group2
+  <%= projectName %>:userGroups: docker,group2
   <%= projectName %>:username: <%= username %>
 #  <%= projectName %>:vpcUuid: VPC UUID
 #  <%= projectName %>:vpcStack: <%= prefix %>-do-resources
