--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Deploy portainer
-  hosts: all
+  hosts: portainer
   tasks:
     - name: Import portainer from dzangolab collection
       ansible.builtin.import_role:
