--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -1,8 +1,12 @@
 ---
+- name: Deploy Portainer with NFS Volume
+  hosts: leader
+  become: true
 
-- name: Deploy portainer
-  hosts: portainer
   tasks:
-    - name: Import portainer from dzangolab collection
+    - name: Deploy Portainer
       ansible.builtin.import_role:
-        name: dzangolab.ansible.docker_portainer
+        name: dzangolab.ansible.docker_portainer # Need to be updated, or modified to use "test-nfs-server-portainer" branch from ansible
+      vars:
+        nfs__ip: "{{ nfs_server_ip }}"
+        use_nfs_server: true
