--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -9,4 +9,4 @@
         name: dzangolab.ansible.docker_portainer # Need to be updated, or modified to use "test-nfs-server-portainer" branch from ansible
       vars:
         nfs__ip: "{{ nfs_server_ip }}"
-        use_nfs_server: true
+        portainer__use_nfs: "{{ use_nfs_server }}"
