--- a/generators/ansible-do/templates/ansible/stack/plays/nfs.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/nfs.yml
@@ -1,39 +1,24 @@
 ---
-- name: Create Portainer repository on the NFS server
+- name: Create necessary directories on the NFS server
   hosts: nfs_server
   become: yes
   tasks:
-    - name: Ensure the Portainer directory exists
+    - name: Ensure necessary directories exist
       file:
-        path: /mnt/nfs/portainer
+        group: "nogroup"
+        owner: "nobody"
+        path: "/mnt/nfs/{{ item }}"
         state: directory
-        mode: '0755'
+        recurse: true
+      with_items:
+        - "portainer"
+        - "traefik/acme"
+        - "traefik/log"
 
-- name: Create Traefik repository on the NFS server
-  hosts: nfs_server
-  become: yes
-  tasks:
-    - name: Ensure the Traefik directory exists
+    - name: Create an empty acme.json
       file:
-        path: /mnt/nfs/traefik
-        state: directory
-        mode: '0755'
-    - name: Ensure the Traefik log directory exists
-      file:
-        path: /mnt/nfs/traefik/log
-        state: directory
-        mode: '0755'
-    - name: Ensure the Traefik acme directory exists
-      file:
-        path: /mnt/nfs/traefik/acme
-        state: directory
-        mode: '0755'
-      
-- name: Install NFS utilities
-  hosts: leader
-  become: true
-  tasks:
-    - name: Ensure NFS utilities are installed
-      ansible.builtin.apt:
-        name: nfs-common
-        state: present
+        path: "/mnt/nfs/traefik/acme/acme.json"
+        state: touch
+        owner: "nobody"
+        group: "nogroup"
+        mode: "0600"
