--- a/generators/ansible-do/templates/ansible/stack/plays/traefik.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/traefik.yml
@@ -20,7 +20,7 @@
       ansible.builtin.import_role:
         name: dzangolab.ansible.docker_traefik # Need to be updated, or modified to use "test-nfs-server-portainer" branch from ansible
       vars:
-        nfs__ip: "{{ nfs_server_ip }}"
+        traefik__nfs_ip: "{{ nfs_server_ip }}"
         traefik__use_nfs: "{{ use_nfs_server }}"
   vars:
     traefik__dashboard_basicauth_passwords: ["{{ traefik_dashboard_basicauth_password.stdout }}"]
