fix(do/ansible): fix traefik playbook

--- a/generators/ansible-do/templates/ansible/stack/group_vars/traefik.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/traefik.yml
@@ -6,4 +6,6 @@ traefik__domain: "traefik.{{ domain }}"
 traefik__label: "traefik"
 traefik__log_level: "ERROR"
 traefik__network: "{{ network_traefik }}"
+traefik__nfs_ip: "{{ nfs_server_ip }}"
 traefik__state: "started"
+traefik__use_nfs: "{{ nfs }}"
