--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -1,8 +1,24 @@
 ---
-
-- name: Deploy portainer
-  hosts: portainer
+- name: Create required portainer directories on the NFS server
+  hosts: nfs_server
+  become: yes
   tasks:
-    - name: Import portainer from dzangolab collection
+    - name: Ensure necessary directories exist
+      file:
+        group: "nogroup"
+        owner: "nobody"
+        path: "/mnt/nfs/{{ item }}"
+        state: directory
+        recurse: true
+      with_items:
+        - "portainer"
+  when:
+    - portainer__use_nfs
+
+- name: Deploy Portainer
+  hosts: leader
+  become: true
+  tasks:
+    - name: Deploy Portainer
       ansible.builtin.import_role:
-        name: dzangolab.ansible.docker_portainer
+        name: dzangolab.ansible.docker_portainer # Need to be updated, or modified to use "test-nfs-server-portainer" branch from ansible
