feat(pulumi-s3-backend): update generator

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -1,7 +1,7 @@
 config:
   <%= projectName %>:aws-account-arns: 
-    - ARN1
-    - ARN2
+    - 
   <%= projectName %>:forceDestroy: false
-  <%= projectName %>:protect: false
-  <%= projectName %>:retainOnDelete: false  
+#  <%= projectName %>:keyDeletionWindow: 7
+  <%= projectName %>:protect: true
+  <%= projectName %>:retainOnDelete: true  
