fix(pulumi-s3-backend): update generator

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/.env.example
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/.env.example
@@ -1,2 +1,2 @@
-AWS_PROFILE=AWS_PROFILE
+AWS_PROFILE=<% if (awsProfile) { %><%= awsProfile %><% } else { %>AWS_PROFILE<% } %>
 PULUMI_ACCESS_TOKEN=SECRET (optional)
