fix(pulumi-s3-backend): add support for passphrase secrets provider

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -5,3 +5,4 @@ config:
 #  <%= projectName %>:keyDeletionWindow: 7
   <%= projectName %>:protect: true
   <%= projectName %>:retainOnDelete: true  
+#  <%= projectName %>:secretsProvider: passphrase  
