fix: ansible nfs

--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -13,7 +13,7 @@
       with_items:
         - "portainer"
   when:
-    - portainer__use_nfs
+    - nfs
 
 - name: Deploy Portainer
   hosts: leader
