fix: ansible generator nfs and swarm

--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -10,6 +10,8 @@ minio_enabled: false
 
 network_private: private
 network_traefik: traefik
+nfs_server_ip: PRIVATE_NFS_IP_ADDRESS
+nfs: false
 
 postgres_version: 16
 
